fix scrollbar

--- a/source/themes/psychopy_bootstrap/static/psychopy.css
+++ b/source/themes/psychopy_bootstrap/static/psychopy.css
@@ -372,7 +372,6 @@ blockquote {
 
 @media (min-width:  360px) {
     .container {
-        overflow-x: hidden;
         max-width: 90%;
     }
     .scbs-carousel-item {
@@ -449,9 +448,9 @@ blockquote {
 }
 
 /* Add this CSS to your existing styles */
-.dropdown:hover .dropdown-menu {
-  display: block;
-}
+/*.dropdown:hover .dropdown-menu {
+/*  display: block;
+/*}
 
 /* for image carousel*/
 
@@ -530,7 +529,7 @@ blockquote {
     }
 }
 
-.button {
+.red_button {
   background-color: #f44336; /* Green */
   font-size: 16px;
   border-radius: 4px;
